--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     </header>
 
     <main class="flex-row justify-space-between">
-      <div class="col-12 col-md-8">
-        <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
-        <div id="repos-container" class="list-group"></div>
-      </div>
+      <div class="col-12 col-md-4">
         <div class="card">
           <h3 class="card-header text-uppercase">Search By User</h3>
           <form id="user-form" class="card-body">
@@ -46,8 +43,14 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-8"></div>
+      <div class="col-12 col-md-8">
+        <h2 class="subtitle">
+          Showing Repositories for: <span id="repo-search-term"></span>
+        </h2>
+        <div id="repos-container" class="list-group"></div>
+      </div>
     </main>
+
     <script src="./assets/js/homepage.js"></script>
   </body>
 </html>
