--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </h2>
         <div id="repos-container" class="list-group"></div>
       </div>
+      <div id="limit-warning"></div>
     </main>
 
     <script src="./assets/js/homepage.js"></script>
